# MillerIndices

./: CMakeLists.txt  README.md
Mathematica/: HexReciprocalVectors.nb
src/: MillerIndexCub.cpp  MillerIndexCub.h  MillerIndexHex.cpp  MillerIndexHex.h  Vector2d.cpp  Vector2d.h  Vector3d.cpp  Vector3d.h  Vector3d.hpp
tests/: CMakeLists.txt  test_cubic_indices.cpp  test_hexagonal_indices.cpp
